Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2
  CHANGES:
    * The MusicBrainz ID of a track is now scrobbled to Last.fm, if it exists.
      (BR 122281)
    * More collection scanning speedups.

  BUGFIXES:
    * Sorting by track length in the playlist is now possible. (BR 208689)
    * Fixed track bookmarks not immediately getting removed from progress bar 
      when they are deleted from the bookmark manager. 
    * Fixed new track bookmarks not getting shown in the progress bar
      immediately.
    * Fixed track bookmarks not getting correctly repainted when resizing 
      progress bar (BR  207091)
    * Correct a logic bug during incremental scanning that could cause the
      wrong tracks to be removed from the collection, requiring a full rescan.
      Should fix bug 208403 and likely multiple others. (BR 208403)
    * "Configure Amarok" dialog takes up less space, making it suitable for
      small screens.
    * Fixed photos applet not working after resuming playback. (BR 206829)
    * Fixed regression where the genre field in the Tag Dialog would show the
      composer of the track. (BR 208255)
    * Don't reshuffle the playlist every time the active track changes when
    * using a random sort order.
    * Fixed the Various Artist node sometimes being shown in the Collection
      Browser with nothing underneath it (or an empty "Unknown" album).
    * Fixed some tracks' tags not being saved correctly to the database.
      (BR 202021)


VERSION 2.2-rc1
  FEATURES:
    * Import itpc:// podcast urls (BR 206615).
    * Mark podcast episode as not-new when starting to play it.
    * Reintroduced indicator icons for new podcast episodes.
    * Added "subscribe" command line switch to add a podcast channel.

  CHANGES:
    * Removed Shoutcast Directory service due to technical and other issues.
    * Made audio CDs respect the "Automatically retrieve cover art" setting.